--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,22 @@
 [pytest]
-addopts = --secure secure.json --junitxml=report.xml --alluredir report/
-db_path = C:\dev\TestMe-TCM\db.sqlite3
-base_url = http://127.0.0.1:8000
+# Using ipdb by default with tab completion https://github.com/pytest-dev/pytest/issues/2064
+
+addopts = --secure=conf/.credentials.json --junitxml=reports/junit/report.xml --alluredir=reports/ --pdbcls ipdb:__main__.debugger_cls
+base_url = https://staging.cmp.jelastic.team/develop/cmp
 headless = False
-tcm_report = False
 
 # logs
 log_cli = True
-log_file = test.log
+log_file = logs/test.log
 log_file_level = INFO
+
+#    --tb=short -sv
+
+markers =
+    regression:
+    smoke:
+    sequentially:
+    parallel:
+
+# Testrail
+    testrail:
