--- a/conf/.testrail.cfg.example
+++ b/conf/.testrail.cfg.example
@@ -1,5 +1,5 @@
 [API]
-url = https://tr.onappdev.com/testrail/
+url =
 email =
 password =
 [TESTRUN]
@@ -7,6 +7,6 @@ assignedto_id = 4
 project_id = 7
 suite_id = 7
 ;plan_id = 4
-description = 'This is an example description'
+description = 'Automatically generated Test Run'
 [TESTCASE]
 custom_comment = 'This is a custom comment'
