--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@
 
 addopts = --secure=conf/.credentials.json --junitxml=reports/junit/report.xml --alluredir=reports/ --pdbcls ipdb:__main__.debugger_cls
 base_url = https://staging.cmp.jelastic.team/develop/cmp
-headless = False
+headless = True
 
 # logs
 log_cli = True
