--- a/conf/.credentials.json.example
+++ b/conf/.credentials.json.example
@@ -1,11 +1,15 @@
 {
+  "project_urls": {
+    "cmp": "",
+    "app.cmp": ""
+  },
   "users": {
     "userRole1": {
-      "login": "",
+      "email": "",
       "password": ""
     },
     "admin_user": {
-      "login": "",
+      "email": "",
       "password": ""
     }
   }
